css/style_screen.css
body {
	font-family: 'Open Sans', sans-serif;
}

#header {
	position: fixed;
	display: block;
	background-color:#25316B;
	color:white;
	width: 100%;
	top: 0px;
	margin: 0px;
}

#header .container {
	margin-left: 30px;
	margin-right: 30px;
	padding: 0;
}

#header h2 {
	font-weight:normal;
}

#breadcrumb {
	background-color:#7879C4;
	
}

#breadcrumb .breadcrumb {
	background-color:#7879C4;
	padding: 8px 0px 8px;
	margin-bottom:0px;
	margin-left: 30px;
	margin-right: 30px;
}

#breadcrumb .breadcrumb li, #breadcrumb .breadcrumb a {
	text-shadow:none;
	color:white !important;
}

#content {
	margin-right: 360px;
	padding: 140px 30px 30px 30px;
	border-right: 30px solid #7879C4;
}

#container-below {
	background-color:#7879C4;
}

#content .gutter {
	background-color:#7879C4;
	min-height:1000px;
	width:35px;
}

nav {
	position: fixed;
	width: 300px;
	right: 30px;
	display: inline-block;
	padding-top: 150px;
}

article {
	margin-top:40px;
}

article header {
	background-color:#494545;
	color:white;
	width:300px;
	text-align:center;

}

article header h3 {
	margin-top:0px;
	margin-bottom:0px;
}

article .article-body {
	margin-left:30px;
	border:thin lightgrey solid;
	padding:10px;
}

.navigation {
	margin-top:30px;
}

.top-menu .nav,.top-menu  .nav-pill {
	margin-bottom:0px;
}
.top-menu a {
	color:white;
}

.main-link {
	font-weight:bold;
}

.icon-homework {
	background-image: url("../img/homework.png");
	background-position: center center;
	height: 14px;
	width: 14px;
}

footer {
	color:white;
	padding:20px;
	background-color:#7879C4;
	text-align:center;
	min-height:50px;
}

footer a {
	color:white;
}

@media (max-width: 980px) {
	.hide-small {
		display: none;
	}
}

@media (max-width: 767px) {
	#header {
		position: static;
	}
	
	#breadcrumb {
		position: static;
	}
	
	.nav {
		margin-left: 30px;
	}
	
	nav {
		position: static;
		width: 100%;
		margin: 0px;
		padding: 0px;
		border-bottom: 30px solid #7879C4;
	}
	
	.nav-stacked {
		margin: 0 30px 8px 30px;
	}
	
	#content {
		margin-right: 0;
		padding: 30px 30px 30px 30px;
		border-right: none;
	}
}

